Segundo Commit con la capa frontend

--- a/tp5-SolisElias-frontend/src/app/components/layout/header/header.component.html
+++ b/tp5-SolisElias-frontend/src/app/components/layout/header/header.component.html
@@ -4,14 +4,17 @@
         
         <div class="container-fluid">
            
-          <a class="navbar-brand" [routerLink]="['parcial']">PySW 2023</a> 
+          <a class="navbar-brand" [routerLink]="['punto1']">PySW 2023</a> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" [routerLink]="['parcial']"><i class="bi bi-suit-club-fill"></i>  parcial</a>
-             <!-- <a class="nav-link" [routerLink]="['parcial']"><i class="bi bi-suit-diamond-fill"></i>  Pagina B</a>
+              <!--<a class="nav-link active" aria-current="page" [routerLink]="['parcial']"><i class="bi bi-suit-club-fill"></i>  parcial</a>-->
+              <a class="nav-link active" aria-current="page" [routerLink]="['punto1']"><i class="bi bi-suit-club-fill"></i>  Productos-punto1</a>
+              <a class="nav-link active" aria-current="page" [routerLink]="['punto2']"><i class="bi bi-suit-club-fill"></i>  Divisas-punto2</a>
+              <a class="nav-link active" aria-current="page" [routerLink]="['punto3']"><i class="bi bi-suit-club-fill"></i>  Ticket-punto3</a>
+              <!-- <a class="nav-link" [routerLink]="['parcial']"><i class="bi bi-suit-diamond-fill"></i>  Pagina B</a>
              -->
             </div>
           </div>
